src/test/ui/feature-gates/feature-gate-link_cfg.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: is feature gated
=======
error[E0658]: is unstable
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/feature-gate-link_cfg.rs:1:1
   |
LL | #[link(name = "foo", cfg(foo))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/37406
   = help: add `#![feature(link_cfg)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
